# kubectl-copi

./: Cargo.toml  README.md  krew-manifest.yaml
.github/workflows/: release.yml
src/: cli.rs  main.rs
