[package]
name = "kubectl-copi"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"]}
env_logger = "0.11.5"
inquire = "0.7.5"
k8s-openapi = { version = "0.23.0", features = [ "latest" ] }
kube = { version = "0.96.0", features = ["config", "client", "http-proxy" ] }
kube-client = { version = "0.96.0", features = ["client", "unstable-client"] }
log = "0.4.22"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
